Async DNS security disclosure (#878)
* CVE-2023-31442
* add to security index

--- a/security/index.html
+++ b/security/index.html
@@ -42,6 +42,7 @@ title: Security Announcements
     <h2>Fixed Security Vulnerabilities</h2>
 
     <ul>
+			<li><a href="akka-async-dns-2023-31442.html">2023-05-02, CVE-2023-31442, Akka Async DNS (used by Akka Discovery)</a></li>
       <li><a href="alpakka-kafka-cve-2023-29471.html">2023-04-17, CVE-2023-29476, Alpakka Kafka</a></li>
       <li><a href="akka-http-cve-2021-42697.html">2021-11-02, CVE-2021-42697, Akka HTTP</a></li>
       <li><a href="akka-http-cve-2021-23339.html">2021-02-24, CVE-2021-23339, Akka HTTP</a></li>
